task5/tests/TestMaster/output/amir_test42.out
lli: TestMaster/output/amir_test42.ll:1:1: error: expected top-level entity
line 4: type mismatch
^
